RESOLVED FIXED 92996
[CSS Regions] region-overflow: break still renders the content that does not fit in the last region.
https://bugs.webkit.org/show_bug.cgi?id=92996
Summary [CSS Regions] region-overflow: break still renders the content that does not ...
Mihai Balan
Reported 2012-08-02 08:54:01 PDT
When setting region-overflow: break; on a region, the content that "spills" out of the last region should break as if it was going to continue in another region and *NOT* be rendered anymore. Currently, the content that overflows the last region is not broken and get rendered as if overflowing.
Attachments
Ref test highlighting the problem (1.13 KB, application/x-zip-compressed)
2012-08-02 09:03 PDT, Mihai Balan
no flags
Patch (3.56 KB, patch)
2012-08-04 01:16 PDT, Mihnea Ovidenie
no flags
Patch for landing (3.77 KB, patch)
2012-08-10 03:21 PDT, Mihnea Ovidenie
no flags
Mihai Balan
Comment 1 2012-08-02 09:03:45 PDT
Created attachment 156101 [details] Ref test highlighting the problem
Mihnea Ovidenie
Comment 2 2012-08-04 01:16:34 PDT
Julien Chaffraix
Comment 3 2012-08-06 15:07:24 PDT
Comment on attachment 156526 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=156526&action=review The change looks fine. By the way - probably related - but shouldn't RenderBlock::hasNextPage be changed too? AFAICT we shouldn't have an extra page after the last region if it has region-overflow: break but the code seems to imply that we do. > LayoutTests/fast/regions/region-overflow-break-expected.html:15 > +#gray { > overflow:visible; > } This doesn't look fine but I guess it is expected because we don't implement forced region breaking. I would put a FIXME as it's confusing if you don't know our current implementation.
Mihnea Ovidenie
Comment 4 2012-08-10 03:21:46 PDT
Created attachment 157695 [details] Patch for landing
WebKit Review Bot
Comment 5 2012-08-10 04:46:17 PDT
Comment on attachment 157695 [details] Patch for landing Clearing flags on attachment: 157695 Committed r125271: <http://trac.webkit.org/changeset/125271>
WebKit Review Bot
Comment 6 2012-08-10 04:46:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.